fix text align center and header sorting

--- a/frontend/src/app/stock/stock.component.css
+++ b/frontend/src/app/stock/stock.component.css
@@ -155,3 +155,8 @@ td.mat-column-action {
 ::ng-deep .text-center {
   text-align: center;
 }
+
+::ng-deep .mat-sort-header-container {
+  display: flex;
+  justify-content: center;
+}
